--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
 dotenv==0.9.9
+Flask==3.1.1
+flask-cors==6.0.0
 future==1.0.0
+git-filter-repo==2.47.0
 iso8601==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
 keyboard==0.13.5
+MarkupSafe==3.0.2
 MouseInfo==0.1.3
 pillow==11.2.1
+psutil==7.0.0
+py3nvml==0.2.7
 PyAutoGUI==0.9.54
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
@@ -15,3 +26,5 @@ python-dotenv==1.1.0
 pytweening==1.2.0
 PyYAML==6.0.2
 serial==0.0.97
+Werkzeug==3.1.3
+xmltodict==0.14.2
